--- a/views/client/pages/topics/index.pug
+++ b/views/client/pages/topics/index.pug
@@ -1,6 +1,7 @@
-doctype html
-html 
-    head 
-        title Chủ đề bài hát 
-    body 
-        h1 Chủ đề bài hát 
+extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+block main
+    .container.my-3
+        .row
+            .col-12
+                +box-head(title)
