--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -6,8 +6,8 @@ html
         //- Nhúng link boostrap4/fontawesome
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css")
-        //- //- Nhúng link css
-        //- link(rel="stylesheet", href="/css/style.css")
+        //- Nhúng link css
+        link(rel="stylesheet", href="/css/style.css")
         //- //- Preview ảnh
         //- link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.css")
         //- //- file-upload-with-preview
@@ -19,7 +19,7 @@ html
 
         include ../partials/footer.pug
         //- Nhúng link js
-        //- script(src="/js/script.js")
+        script(src="/js/script.js")
         //- Nhúng link bootstrap js
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js") 
