--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,1 +1,16 @@
-header Header 
+header.header 
+    .container
+        .row.align-items-center
+            .col-3
+                .inner-logo
+                    a(href="/")
+                        img(src="/images/logo.svg", alt="Logo")
+                
+            .col-4
+                .inner-menu 
+                    ul 
+                        li 
+                            a(href="/") Trang chủ
+                        li 
+                            a(href="/topics") Chủ đề
+                        
