--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -8,6 +8,9 @@ html
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css")
         //- Nhúng link css
         link(rel="stylesheet", href="/css/style.css")
+        
+        //- Audio 
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css")
         //- //- Preview ảnh
         //- link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.css")
         //- //- file-upload-with-preview
@@ -18,8 +21,11 @@ html
         block main
 
         include ../partials/footer.pug
+        //-Audio
+        script(src="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js")
         //- Nhúng link js
         script(src="/js/script.js")
+
         //- Nhúng link bootstrap js
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js") 
