--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -5,7 +5,26 @@ header.header
                 .inner-logo
                     a(href="/")
                         img(src="/images/logo.svg", alt="Logo")
-                
+
+
+            .col-5 
+                .box-search 
+                    form(
+                        action="/search/result"
+                        method="GET"
+                    )            
+                        div(class="form-group d-flex mb-0")
+                            input(
+                                type="text"
+                                placeholder="Nhập từ khóa...."
+                                class="form-control"
+                                name="keyword"
+                                value=keyword
+                            )
+                            button(
+                                type="submit"
+                                class="btn btn-primary"
+                            ) Tìm
             .col-4
                 .inner-menu 
                     ul 
