--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -25,6 +25,23 @@ header.header
                                 type="submit"
                                 class="btn btn-primary"
                             ) Tìm
+                    .inner-suggest.show 
+                        .inner-list 
+                            //- a(href=`/songs/detail/:slugSong` class="inner-item")
+                            //-     .inner-image 
+                            //-         img(src="")
+                            //-     .inner-info 
+                            //-         .inner-title Cắt đôi nỗi sầu 
+                            //-         .inner-singer 
+                            //-             <i class="fa-solid fa-microphone-lines"> </i> Tăng Duy Tân 
+                            //- a(href=`/songs/detail/:slugSong` class="inner-item")
+                            //-     .inner-image 
+                            //-         img(src="")
+                            //-     .inner-info 
+                            //-         .inner-title Cắt đôi nỗi sầu 
+                            //-         .inner-singer 
+                            //-             <i class="fa-solid fa-microphone-lines"> </i> Tăng Duy Tân 
+
             .col-4
                 .inner-menu 
                     ul 
