Trang Quản lý chủ đề (bên admin

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -2,10 +2,10 @@
     .inner-menu 
         ul 
             li 
-                a(href=`${prefixAdmin}/dashboard`) Tổng quan
+                a(href=`/${prefixAdmin}/dashboard`) Tổng quan
             //- if(role.permissions.includes("products-category_view"))
             li 
-                a(href=`${prefixAdmin}/topics`) Quản lý chủ đề
+                a(href=`/${prefixAdmin}/topics`) Quản lý chủ đề
             //- if(role.permissions.includes("products_view"))    
             li 
                 a(href=`${prefixAdmin}/songs`) Quản lý bài hát
