--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -8,18 +8,18 @@
                 a(href=`/${prefixAdmin}/topics`) Quản lý chủ đề
             //- if(role.permissions.includes("products_view"))    
             li 
-                a(href=`${prefixAdmin}/songs`) Quản lý bài hát
+                a(href=`/${prefixAdmin}/songs`) Quản lý bài hát
             //- if(role.permissions.includes("roles_view"))    
             li 
-                a(href=`${prefixAdmin}/singers`) Quản lý ca sĩ
+                a(href=`/${prefixAdmin}/singers`) Quản lý ca sĩ
             //- if(role.permissions.includes("roles_permissions"))
             li 
-                a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
+                a(href=`/${prefixAdmin}/roles/permissions`) Phân quyền
             //- if(role.permissions.includes("accounts_view"))
             li 
-                a(href=`${prefixAdmin}/accounts`) Tài khoản admin
+                a(href=`/${prefixAdmin}/accounts`) Tài khoản admin
             //- if(role.permissions.includes("posts-category_view"))   
             li 
-                a(href=`${prefixAdmin}/users`) Tài khoản user
+                a(href=`/${prefixAdmin}/users`) Tài khoản user
             li 
-                a(href=`${prefixAdmin}/settings/general`) Cài đặt chung
+                a(href=`/${prefixAdmin}/settings/general`) Cài đặt chung
