Tạo mới một bài hát cơ bản
Có upload ảnh lên cloudinary
còn audio và lyrics  , position chưa có

--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -20,7 +20,7 @@ html
                 block main
        
         //- Nhúng link js
-        script(src="/js/script.js")
+        script(src="/admin/js/script.js")
 
         //- Nhúng link bootstrap js
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
