--- a/views/admin/pages/songs/index.pug
+++ b/views/admin/pages/songs/index.pug
@@ -12,7 +12,7 @@ block main
 
             .col-4.text-right 
                 a(
-                  href=`/${prefixAdmin}/songs/create`
+                  href=`${prefixAdmin}/songs/create`
                   class="btn btn-outline-success" 
                 ) + Thêm mới
 
@@ -30,7 +30,7 @@ block main
                 th Trạng thái
                 th Hành động 
             tbody
-              each item,index in topics
+              each item,index in songs
                 tr
                   td #{index+1}
                   td 
@@ -41,10 +41,9 @@ block main
                     height = "auto"
                     )
                   td #{item.title}
-                  td #{item.title}
-                  td  Ca sĩ
-                  td  Chủ đề
-                  td  Vị trí
+                  //-td  Ca sĩ
+                  //-td  Chủ đề
+                  //-td  Vị trí
                   td
                     if(item.status =="active")
                         a(href="javascript:;"
