Thêm phần lyrics chạy theo cho bài hát

--- a/views/admin/pages/songs/create.pug
+++ b/views/admin/pages/songs/create.pug
@@ -70,6 +70,14 @@ block main
                     upload-audio-play controls)
                         source(src="")
                 div(class="form-group")
+                    label(for="lyrics") Lời bài hát
+                    textarea(
+                        class="form-control "
+                        id="lyrics"
+                        name="lyrics"
+                        rows="20"
+                    )
+                div(class="form-group")
                     label(for="desc") Mô tả
                     textarea(
                         class="form-control "
