--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,7 @@ header {
 .inner-text {
   font-size: 16px;
   line-height: 1.5;
+  white-space: pre;
 }
 
 /* Media queries for responsiveness (example) */
