Trang chỉnh sửa bài hát

--- a/views/admin/pages/songs/edit.pug
+++ b/views/admin/pages/songs/edit.pug
@@ -4,7 +4,7 @@ block main
     
         h1(class="mb-4") #{title}
 
-        form(action=`${prefixAdmin}/songs/create`
+        form(action=`${prefixAdmin}/songs/edit/${song.id}?_method=PATCH`
                 method="POST"
                 enctype="multipart/form-data"
                 )
@@ -16,6 +16,7 @@ block main
                         id="title"
                         name="title"
                         required
+                        value=song.title
                     )
                 div(class="form-group")
                     label(for="topic") topic
@@ -27,7 +28,8 @@ block main
                         ) 
                         option(value="" disabled selected) -- Chọn chủ đề --
                         each item in topics 
-                            option(value=item.id) #{item.title}
+                            option(value=item.id
+                            selected=(item.id == song.topicId ? true :false)) #{item.title}
                 div(class="form-group")
                     label(for="singer") Ca sĩ
                     select(
@@ -38,7 +40,8 @@ block main
                         )  
                         option(value="" disabled selected) -- Chọn ca sĩ --
                         each item in singers
-                            option(value=item.id) #{item.fullName}
+                            option(value=item.id
+                            selected=(item.id == song.singerId ? true :false)) #{item.fullName}
             
                 div(class="form-group"
                     upload-image)
@@ -51,7 +54,7 @@ block main
                         accept="image/*"
                         upload-image-input
                     )
-                    img(src=""
+                    img(src=song.avatar
                     upload-image-preview
                     class = "image-preview"
                     )
@@ -68,7 +71,7 @@ block main
                     )
                     audio(
                     upload-audio-play controls)
-                        source(src="")
+                        source(src=song.audio)
                 div(class="form-group")
                     label(for="lyrics") Lời bài hát
                     textarea(
@@ -76,7 +79,7 @@ block main
                         id="lyrics"
                         name="lyrics"
                         rows="20"
-                    )
+                    ) #{song.lyric}
                 div(class="form-group")
                     label(for="desc") Mô tả
                     textarea(
@@ -84,8 +87,9 @@ block main
                         id="desc"
                         name="description"
                         row="5"
+                        
                         textarea-mce
-                    )
+                    ) #{song.description}
                     
                 div(class="form-group form-check form-check-inline")
                     input(
@@ -94,7 +98,7 @@ block main
                         id="statusActive"
                         name="status"
                         value="active"
-                        checked
+                        checked = (song.status == "active" ? true : false )
                     )
                     label(for="statusActive" class="form-check-label") Hoạt động
                 div(class="form-group form-check form-check-inline")
@@ -104,6 +108,7 @@ block main
                         id="statusInActive"
                         name="status"
                         value="inactive"
+                        checked = (song.status == "inactive" ? true : false )
                         
                     )
                     label(for="statusInActive" class="form-check-label") Dừng hoạt động
@@ -111,6 +116,6 @@ block main
                 button(
                     type="submit"
                     class="btn btn-primary"
-                ) Tạo mới
+                ) Cập nhật
     
     
